DigicielFull/force-app/main/default/objects/Opportunity/fields/Contract_Term_SP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_SP__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <inlineHelpText>What is the total duration of the Contract?

1 Year =  12

2 Years = 24

3 Years = 36

4 Years = 48

5 Years = 60</inlineHelpText>
    <label>Contract Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>