DigicielFull/force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>zDeprecatedContract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smartnet</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>E1 Voice</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>IPLC</fullName>
            </value>
            <value>
                <fullName>DPLC</fullName>
            </value>
            <value>
                <fullName>GSM Gateway</fullName>
            </value>
            <value>
                <fullName>Office Phone</fullName>
            </value>
            <value>
                <fullName>Bundled Contract</fullName>
            </value>
            <value>
                <fullName>Online Back Up</fullName>
            </value>
            <value>
                <fullName>Hosted Exchange</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>M2M</fullName>
            </value>
            <value>
                <fullName>DAAS</fullName>
            </value>
            <value>
                <fullName>DRAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>