DigicielFull/force-app/main/default/objects/Opportunity/fields/Contract_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Contract_Uploaded__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This field is used by the Group Business team to determine if a Contract is attached to the Opportunity</description>
    <label>zDeprecatedContract Uploaded</label>
    <type>Checkbox</type>
</CustomField>