DigicielFull/force-app/main/default/objects/Opportunity/fields/ContractAttached__c.field-meta.xml
<CustomField>
    <fullName>ContractAttached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates that the Contract has been uploaded to the Opportunity via Chatter</description>
    <label>Contract Attached</label>
    <type>Checkbox</type>
</CustomField>