DigicielFull/force-app/main/default/objects/Opportunity/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>