DigicielFull/force-app/main/default/objects/Opportunity/fields/Converter_Purchase_Rental__c.field-meta.xml
<CustomField>
    <fullName>Converter_Purchase_Rental__c</fullName>
    <label>zDeprecatedConverter Purchase/Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>