DigicielFull/force-app/main/default/objects/Opportunity/fields/Costs_Installation__c.field-meta.xml
<CustomField>
    <fullName>Costs_Installation__c</fullName>
    <description>Gross less Net to calculate the costs</description>
    <formula>Installation__c - Net_MTH_Installation__c</formula>
    <label>Costs - Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>