DigicielFull/force-app/main/default/objects/Opportunity/fields/Costs_MRC__c.field-meta.xml
<CustomField>
    <fullName>Costs_MRC__c</fullName>
    <formula>MRC__c - Net_MTH_MRC_Total__c</formula>
    <label>Costs - MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>