DigicielFull/force-app/main/default/objects/Opportunity/fields/Costs_Rental_Lease__c.field-meta.xml
<CustomField>
    <fullName>Costs_Rental_Lease__c</fullName>
    <formula>Rental_or_Lease__c - Net_MTH_Rental_or_Lease__c</formula>
    <label>Costs - Rental/Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>