DigicielFull/force-app/main/default/objects/Opportunity/fields/CREATEDDATE_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>CREATEDDATE_MIGRATION__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <description>this can be deleted after backup</description>
    <label>zDeprecated - CREATEDDATE_MIGRATION</label>
    <type>DateTime</type>
</CustomField>