DigicielFull/force-app/main/default/objects/Opportunity/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <businessOwnerUser>ttsdev_admin@digicelgroup.com.commcloud</businessOwnerUser>
    <description>THIS FIELD IS UDED BY THE CM TOOL</description>
    <label>Credit Limit</label>
    <summarizedField>OpportunityLineItem.Credit_Limit__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>