DigicielFull/force-app/main/default/objects/Opportunity/fields/Current_Marketing_Media__c.field-meta.xml
<CustomField>
    <fullName>Current_Marketing_Media__c</fullName>
    <label>zDeprecatedCurrent Marketing Media</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Digital Banner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>