DigicielFull/force-app/main/default/objects/Opportunity/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <label>Current Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digicel</fullName>
            </value>
            <value>
                <fullName>Access Haiti</fullName>
            </value>
            <value>
                <fullName>ANTENAS Y SISTEMAS</fullName>
            </value>
            <value>
                <fullName>Atalou</fullName>
            </value>
            <value>
                <fullName>B Mobile</fullName>
            </value>
            <value>
                <fullName>BT LATAN</fullName>
            </value>
            <value>
                <fullName>Buromatic</fullName>
            </value>
            <value>
                <fullName>C&amp;I Office Supplies</fullName>
            </value>
            <value>
                <fullName>Cable &amp; Wireless Mas Movil</fullName>
            </value>
            <value>
                <fullName>CABLE ONDA TELECARRIER</fullName>
            </value>
            <value>
                <fullName>Canal Sat</fullName>
            </value>
            <value>
                <fullName>Centrada</fullName>
            </value>
            <value>
                <fullName>Claro</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Comp Haiti</fullName>
            </value>
            <value>
                <fullName>CQTECH</fullName>
            </value>
            <value>
                <fullName>CWP Empresarial ICT</fullName>
            </value>
            <value>
                <fullName>Damaz</fullName>
            </value>
            <value>
                <fullName>Data Vision</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>DESCA</fullName>
            </value>
            <value>
                <fullName>Directway</fullName>
            </value>
            <value>
                <fullName>Dixievox</fullName>
            </value>
            <value>
                <fullName>Drop Box</fullName>
            </value>
            <value>
                <fullName>ECOMSA</fullName>
            </value>
            <value>
                <fullName>El Dorado Communications Inc.</fullName>
            </value>
            <value>
                <fullName>E-Networks</fullName>
            </value>
            <value>
                <fullName>FLOW</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>Gama</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>