DigicielFull/force-app/main/default/objects/Opportunity/fields/Current_Solution_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution_in_Place__c</fullName>
    <label>zDeprecatedCurrent Solution in Place</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>