DigicielFull/force-app/main/default/objects/Opportunity/fields/Customer_Deposit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Customer_Deposit_Waived__c</fullName>
    <description>Apex Class
https://na52.salesforce.com/01pd0000002XBPJ?retURL=%2Fp%2Fsetup%2Flayout%2FLayoutFieldList%3Ftype%3DOpportunity%26setupid%3DOpportunityFields</description>
    <formula>if( Account.Deposits_Waived__c == TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If &apos;Yes&apos; then the total deposit will be automatically set to 0</inlineHelpText>
    <label>z Deprecated - Customer Deposit Waived?</label>
    <type>Text</type>
</CustomField>