DigicielFull/force-app/main/default/objects/Opportunity/fields/Date_Approved_Commercial_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Commercial_Review__c</fullName>
    <label>Date Approved Commercial Review</label>
    <type>DateTime</type>
</CustomField>