DigicielFull/force-app/main/default/objects/Opportunity/fields/Days_from_Booked_to_Billed__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Booked_to_Billed__c</fullName>
    <formula>CASE(MOD( Estimated_Billed_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Estimated_Billed_Date__c - CloseDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Estimated_Billed_Date__c - CloseDate )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field counts the number of days between the &quot;Estimated Billed Date&quot; and the opportunity &quot;Close Date&quot; and excludes weekends</inlineHelpText>
    <label>Days from Booked to Billed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>