DigicielFull/force-app/main/default/objects/Opportunity/fields/Deal_Discount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Discount__c</fullName>
    <label>zDeprecatedDeal Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>