DigicielFull/force-app/main/default/objects/Opportunity/fields/Deal_Review_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Meeting__c</fullName>
    <label>Deal Review Meeting</label>
    <type>DateTime</type>
</CustomField>