DigicielFull/force-app/main/default/objects/Opportunity/fields/Dealhub_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>Dealhub_File_Upload__c</fullName>
    <description>Used for file upload via dealroom</description>
    <formula>&quot;https://digicelgroup.secure.force.com/fileupload/guestsite?showbtn=false&amp;hidebtn=true&amp;desc=Please%20Attach%20File&amp;oppid=&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealhub File Upload</label>
    <type>Text</type>
</CustomField>