DigicielFull/force-app/main/default/objects/Opportunity/fields/DealhubAddress__c.field-meta.xml
<CustomField>
    <fullName>DealhubAddress__c</fullName>
    <formula>Owner.DigicelLegalAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealhub Address</label>
    <type>Text</type>
</CustomField>