DigicielFull/force-app/main/default/objects/Opportunity/fields/Dedicated_Internet_BDM_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Internet_BDM_Comments__c</fullName>
    <label>Dedicated Internet BDM Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>