DigicielFull/force-app/main/default/objects/Opportunity/fields/Dedicated_Internet_Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Internet_Contract_Period__c</fullName>
    <label>Dedicated Internet Contract Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>Other (Custom Term)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>