DigicielFull/force-app/main/default/objects/Opportunity/fields/Dedicated_Internet_Speed__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Internet_Speed__c</fullName>
    <label>Dedicated Internet Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>