DigicielFull/force-app/main/default/objects/Opportunity/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>