DigicielFull/force-app/main/default/objects/Opportunity/fields/Digicel_Country__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Country__c</fullName>
    <formula>TEXT(  Owner.Digicel_Country__c  )</formula>
    <label>Digicel Country</label>
    <type>Text</type>
</CustomField>