DigicielFull/force-app/main/default/objects/Opportunity/fields/Direct_Link_Service__c.field-meta.xml
<CustomField>
    <fullName>Direct_Link_Service__c</fullName>
    <label>Direct Link Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Network</fullName>
            </value>
            <value>
                <fullName>PRI Voice</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>