DigicielFull/force-app/main/default/objects/Opportunity/fields/Dongle_Mifi__c.field-meta.xml
<CustomField>
    <fullName>Dongle_Mifi__c</fullName>
    <label>Dongle Mifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>