DigicielFull/force-app/main/default/objects/Opportunity/fields/Dongle_Mifi_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Dongle_Mifi_ARPU__c</fullName>
    <label>Dongle Mifi ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>