DigicielFull/force-app/main/default/objects/Opportunity/fields/Dongle_Mifi_ARPU_Price__c.field-meta.xml
<CustomField>
    <fullName>Dongle_Mifi_ARPU_Price__c</fullName>
    <formula>Dongle_Mifi_ARPU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dongle Mifi ARPU Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>