DigicielFull/force-app/main/default/objects/Opportunity/fields/Dongle_Mifi_Devices__c.field-meta.xml
<CustomField>
    <fullName>Dongle_Mifi_Devices__c</fullName>
    <label>Dongle Mifi Devices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>