DigicielFull/force-app/main/default/objects/Opportunity/fields/Dongle_Mifi_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Dongle_Mifi_Upgrade__c</fullName>
    <label>Dongle Mifi Upgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>