DigicielFull/force-app/main/default/objects/Opportunity/fields/Draft_IO_Approved__c.field-meta.xml
<CustomField>
    <fullName>Draft_IO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft IO Approved</label>
    <type>Checkbox</type>
</CustomField>