DigicielFull/force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date on which the campaign will end</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>