DigicielFull/force-app/main/default/objects/Opportunity/fields/Equipment_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Deal_Type__c</fullName>
    <label>Equipment Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supporting MRR (Strategic)</fullName>
            </value>
            <value>
                <fullName>Deal Structured OTC</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Restructure to MRR</fullName>
            </value>
            <value>
                <fullName>Hardware Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>