DigicielFull/force-app/main/default/objects/Opportunity/fields/Estimated_Billed_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Billed_Date__c</fullName>
    <label>Estimated Billed Date</label>
    <type>Date</type>
</CustomField>