DigicielFull/force-app/main/default/objects/Opportunity/fields/Expected_Impact_of_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Expected_Impact_of_Marketing__c</fullName>
    <label>Expected Impact of Marketing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>