DigicielFull/force-app/main/default/objects/Opportunity/fields/Expected_Impact_of_the_Solution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Impact_of_the_Solution__c</fullName>
    <label>Expected Impact of the Solution</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>