DigicielFull/force-app/main/default/objects/Opportunity/fields/Expected_MRC_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_MRC_Revenue__c</fullName>
    <formula>(MRC__c +  Rental_or_Lease__c) *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MRC + Rental or Lease revenue, based on the probability %</inlineHelpText>
    <label>Expected MRC Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>