DigicielFull/force-app/main/default/objects/Opportunity/fields/Expected_MRC_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_MRC_Value__c</fullName>
    <formula>MRC__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MRC + Rental/Lease values</inlineHelpText>
    <label>Expected MRC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>