DigicielFull/force-app/main/default/objects/Opportunity/fields/Expected_One_Off_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_One_Off_Value__c</fullName>
    <formula>One_Off_RR__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected One Off Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>