DigicielFull/force-app/main/default/objects/Opportunity/fields/Expected_OTC_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_OTC_Revenue__c</fullName>
    <formula>( OTC__c +  Installation__c ) *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OTC +Installation revenue, based on the probability %</inlineHelpText>
    <label>Expected OTC Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>