DigicielFull/force-app/main/default/objects/Opportunity/fields/FDT__c.field-meta.xml
<CustomField>
    <fullName>FDT__c</fullName>
    <label>FDT #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D01</fullName>
            </value>
            <value>
                <fullName>D02</fullName>
            </value>
            <value>
                <fullName>D03</fullName>
            </value>
            <value>
                <fullName>D04</fullName>
            </value>
            <value>
                <fullName>D05</fullName>
            </value>
            <value>
                <fullName>D06</fullName>
            </value>
            <value>
                <fullName>D07</fullName>
            </value>
            <value>
                <fullName>D08</fullName>
            </value>
            <value>
                <fullName>D10</fullName>
            </value>
            <value>
                <fullName>D11</fullName>
            </value>
            <value>
                <fullName>D12</fullName>
            </value>
            <value>
                <fullName>D13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>